# blackbar

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY-DEMO.md  DOCKER_COMMANDS.md  DOCUMENTATION_INDEX.md  LICENSE  README.md  SECURITY.md  SETUP_GUIDE.md  check-prerequisites.sh  docker-compose.demo.yml  docker-compose.prod.yml  docker-compose.yml  setup.sh  verify-api-config.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: backend-ci.yml  container.yml  frontend-ci.yml  release.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  verify_setup.py
backend/packs/: bc-fippa-v1.json  global_prompts.json  ontario-mfippa-v1.json
backend/scripts/: extract_routes.py  migrate_audit_log_username.py  migrate_role_schema.py  migrate_roles_to_lowercase.py  seed_demo_data.py  seed_llm_configs.py  update_routes_to_tenant_db.py
backend/scripts/dev/: clear_llm_configs.py  test_llm_configs.py
backend/src/: config.py  database.py  dependencies.py  main.py
backend/src/admin/: __init__.py  config_models.py  config_routes.py  llm_routes.py  routes.py
backend/src/auth/: activation_routes.py  activation_service.py  auth_service.py  dependencies.py  magic_link_routes.py  magic_link_service.py  roles.py  routes.py  security.py
backend/src/cases/: approval_routes.py  collection_link_routes.py  collection_link_service.py  models.py  permissions.py  public_routes.py  queue_routes.py  release_package_models.py  release_package_service.py  release_routes.py  routes.py  status_routes.py  team_routes.py  utils.py
backend/src/categories/: routes.py
backend/src/core/: admin_dependencies.py  auth_middleware.py  correlation.py  database.py  dependencies.py  logging_config.py  metrics_routes.py  telemetry.py
backend/src/documents/: attachment_routes.py  contest_routes.py  document_status_routes.py  models.py  processing_service.py  redaction_routes.py  redaction_suggestion_routes.py  routes.py  search_routes.py  share_routes.py
backend/src/llm/: __init__.py  encryption.py  models.py  repository.py  service.py
backend/src/migrations/: add_system_roles.py  fix_audit_log_username.py
backend/src/packs/: __init__.py  loader.py  registry.py  routes.py  validator.py
backend/src/public_users/: models.py  repository.py
backend/src/scripts/: purge_database.py
backend/src/teams/: models.py  routes.py
backend/src/templates/: models.py  routes.py
backend/src/users/: models.py  repository.py
backend/src/utils/: ai_processing.py  ai_redaction.py  bulk_redaction.py  conversion.py  deadline_tracker.py  email_service.py  email_threads.py  error_handler.py  llm_client.py  log_utils.py  ocr.py  pdf_redaction.py  pii_detection.py  release_package.py  search_engine.py  seed_templates.py  welcome_email_service.py
backend/src/workflow/: __init__.py  indexes.py  models.py  repository.py  routes.py
backend/tests/: conftest.py  factories.py  test_config.py  test_infrastructure.py  test_main.py
backend/tests/admin/: test_config_models.py  test_config_routes.py  test_llm_routes.py  test_routes.py
backend/tests/auth/: test_activation_routes.py  test_activation_service.py  test_auth_dependencies.py  test_auth_service.py  test_dependencies.py  test_magic_link_routes.py  test_magic_link_service.py  test_roles.py  test_routes.py  test_security.py
backend/tests/cases/: test_approval_routes.py  test_collection_link_routes.py  test_collection_link_service.py  test_permissions.py  test_public_routes.py  test_queue_routes.py  test_release_package_service.py  test_release_routes.py  test_routes.py  test_status_routes.py  test_team_routes.py
backend/tests/categories/: test_routes.py
backend/tests/core/: test_admin_dependencies.py  test_auth_middleware.py  test_correlation.py  test_database.py  test_dependencies.py  test_metrics_routes.py  test_telemetry.py
backend/tests/documents/: test_attachment_routes.py  test_contest_routes.py  test_document_status_routes.py  test_processing_service.py  test_redaction_routes.py  test_redaction_suggestion_routes.py  test_routes.py  test_search_routes.py  test_share_routes.py
backend/tests/fixtures/redaction-samples/: APA_Student_Paper.docx  Expanded_FOIPPA_Test_Document.docx  FOIPPA_Test_Document.docx  PII_Excel.xlsx  README.md  Realistic_FOIPPA_Test_Document.docx
backend/tests/llm/: __init__.py  test_encryption.py  test_models.py  test_repository.py  test_service.py
backend/tests/packs/: test_loader.py  test_registry.py  test_routes.py  test_validator.py
backend/tests/public_users/: test_models.py  test_repository.py
backend/tests/templates/: test_models.py  test_routes.py
backend/tests/users/: test_models.py  test_repository.py
backend/tests/utils/: test_ai_processing.py  test_ai_redaction.py  test_bulk_redaction.py  test_conversion.py  test_deadline_tracker.py  test_email_service.py  test_email_threads.py  test_error_handler.py  test_llm_client.py  test_log_utils.py  test_ocr.py  test_pdf_redaction.py  test_pii_detection.py  test_release_package.py  test_search_engine.py  test_seed_templates.py  test_welcome_email_service.py
backend/tests/workflow/: test_clock_routes.py  test_contributor_transfer_routes.py  test_indexes.py  test_models.py  test_records_queue_routes.py  test_repository.py
deploy/demo/: blackbar-demo-reset.service  blackbar-demo-reset.timer
docs/: AGENTS.md  STYLEGUIDE.md
docs/api/: AI_PROMPT_SYSTEM.md  ENDPOINTS.md
docs/architecture/: AGENTIC_REDACTION_PIPELINE.md  ARCHITECTURE.md  DATA_MODELS.md  DOCUMENT_PROCESSING.md  SECURITY_ARCHITECTURE.md  SYSTEM_OVERVIEW_DIAGRAM.md
docs/guides/: DEVELOPER_QUICK_START.md  SUGGESTION_OVERLAY_GUIDE.md
docs/screenshots/: README.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
observability/: docker-compose.observability.yml
scripts/: demo_reset.sh  demo_screenshots.cjs  demo_screenshots.sh  demo_snapshot.sh  migrate_dates_to_bson.py  seed_trustlab_demo.py
(+201 files in other folders)
