[project]
name = "blackbar-backend"
version = "0.1.0rc2"
description = "BlackBar Freedom of Information case management and document redaction system — backend"
# Note: top-level LICENSE/README live at the repo root one level above this
# package. Modern setuptools refuses `file = "../LICENSE"` references that
# resolve outside the package directory. The OSS-licensing source of truth is
# the repo-root LICENSE; expressed here as an SPDX identifier instead.
license = "Apache-2.0"
requires-python = ">=3.11"

# Runtime deps mirror requirements.txt for now.
# Once the OSS migration to a fresh repo lands (audit Q1), requirements.txt
# can be deleted and uv/pip-tools-generated lock files become the source of truth.
dependencies = [
  "fastapi>=0.109.0,<1.0.0",
  "uvicorn>=0.25.0,<1.0.0",
  "python-multipart>=0.0.6,<1.0.0",
  "motor>=3.3.0,<4.0.0",
  "pymongo>=4.6.0,<5.0.0",
  "pypdf>=3.17.0,<5.0.0",
  "reportlab>=4.0.0,<5.0.0",
  "openai>=1.10.0,<2.0.0",
  "anthropic>=0.18.0,<1.0.0",
  "cohere>=4.0.0,<6.0.0",
  "passlib>=1.7.4,<2.0.0",
  "bcrypt>=4.0.0,<5.0.0",
  "PyJWT[crypto]>=2.8.0,<3.0.0",
  "pydantic[email]>=2.5.0,<3.0.0",
  "sendgrid==6.12.5",
  "python-dotenv>=1.0.0,<2.0.0",
  "langchain-openai>=0.0.5,<1.0.0",
  "langchain-core>=0.1.0,<1.0.0",
  "pytesseract>=0.3.10,<1.0.0",
  "pillow>=10.0.0,<12.0.0",
  "PyMuPDF>=1.23.0,<2.0.0",
  "langchain>=0.1.0,<2.0.0",
  "python-docx>=1.0.0,<2.0.0",
  "extract-msg>=0.45.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "slowapi>=0.1.9,<1.0.0",
  "structlog>=23.1.0,<25.0.0",
  "prometheus-client>=0.17.0,<1.0.0",
  "opentelemetry-api>=1.20.0,<2.0.0",
  "opentelemetry-sdk>=1.20.0,<2.0.0",
  "opentelemetry-instrumentation-fastapi>=0.41b0",
  "opentelemetry-instrumentation-logging>=0.41b0",
  "opentelemetry-exporter-otlp>=1.20.0,<2.0.0",
  "opentelemetry-exporter-prometheus>=0.41b0",
  "sentry-sdk[fastapi]>=1.29.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "pytest-timeout>=2.4",
  "testcontainers[mongodb]>=4.8",
  "httpx>=0.27",
  "respx>=0.21",
  "freezegun>=1.5",
  "factory-boy>=3.3",
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.11",
  "types-passlib",
]

# ----------------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
  # Hang protection (Phase 2.10): cap any single test at 60s. If a test
  # blocks on Mongo topology selection or motor's thread pool, the timeout
  # surfaces the offending name instead of stalling the whole suite.
  "--timeout=60",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests that hit testcontainers-managed services",
  "unit: marks pure unit tests with no I/O",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:passlib.*",
  "ignore::DeprecationWarning:motor.*",
  "ignore::DeprecationWarning:testcontainers.*",
  # Pydantic v2 deprecation noise from existing class-based Config blocks;
  # migration to ConfigDict is tracked outside Phase 2 infrastructure.
  "ignore::pydantic.warnings.PydanticDeprecatedSince20",
  # FastAPI's @app.on_event("startup") usage in src.main triggers a
  # typing_extensions.deprecated warning at import time. The warning
  # message is multi-line; the `(?s)` flag makes `.` match newlines so
  # the leading "\n        on_event ..." body matches.
  "ignore:(?s).*on_event is deprecated.*:DeprecationWarning",
  # `datetime.utcnow()` is deprecated in Python 3.12. Many existing src/
  # call sites still use it (`src.main.health_check` and others).
  # Migration tracked outside Phase 2 infrastructure.
  "ignore:datetime.datetime.utcnow.*:DeprecationWarning",
  # PyMongo 4.x emits ResourceWarning("Unclosed MongoClient ...") from
  # `MongoClient.__del__` when the GC runs after the asyncio event loop
  # is closed. The `db` fixture in tests/conftest.py forces a `gc.collect()`
  # after `client.close()` to keep the close → __del__ chain inside the
  # loop's lifetime, but a few stragglers still surface in long full-suite
  # runs (Phase 2.10 finding). Filtering at the global level here keeps
  # the full suite green; per-test resource hygiene remains enforced by
  # the explicit `client.close()` call.
  "ignore:Unclosed MongoClient.*:ResourceWarning",
  "ignore::pytest.PytestUnraisableExceptionWarning",
]

# ----------------------------------------------------------------------------
# Coverage
# ----------------------------------------------------------------------------

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
  "src/migrations/*",
  "*/__init__.py",
  "src/scripts/dev/*",
  # Presidio is deactivated in production per audit Q15. The module
  # unconditionally imports presidio_analyzer at the top level, so it
  # cannot even be imported (and therefore not covered) in the
  # production deployment. Audit Section 11 / B52: the module is
  # effectively dead code while Presidio remains uninstalled.
  # Tracked in tests/utils/test_pii_detection.py.
  "src/utils/pii_detection.py",
]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
]
fail_under = 80
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

# ----------------------------------------------------------------------------
# Ruff (Phase 5 will wire to CI, but the config lives here from now)
# ----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "ASYNC", "T20"]
# Baseline ignores carry the codebase through Phase 5 wiring of CI.
# Per-rule rationale:
#   E501  — line length is owned by black, not ruff.
#   B008  — FastAPI uses `Depends(get_x)` as the standard default-argument
#           pattern; flagging it project-wide produces hundreds of false
#           positives in route handlers.
#   B904  — many `except: raise X(...)` sites pre-date the `from` chaining
#           convention; tracked as a cleanup follow-up.
#   E402  — a handful of test modules intentionally import after env-var
#           setup; flagged but acceptable.
#   UP042 — `class Foo(str, Enum)` is still used in shipped models; the
#           replacement `StrEnum` requires a small refactor across consumers.
#   ASYNC230 / ASYNC240 / ASYNC250 / ASYNC109 — known blocking-I/O sites in
#           CLI scripts + migration utilities (not request hot paths);
#           tracked as cleanup follow-ups.
#   E722  — a few `except:` clauses in defensive code; cleanup follow-up.
#   E741  — three single-letter variable names (`l`, `I`, `O`); cleanup
#           follow-up rather than block the CI rollout.
#   B017 / B028 / C403 / C416 / B007 — small handful of legacy patterns
#           pending refactor.
#   F841  — eleven unused-variable sites; cleanup follow-up.
#   F811  — one redefined symbol; cleanup follow-up.
# These are tracked for cleanup in KNOWN_ISSUES.md; the OSS migration audit
# (Q1) is the natural moment to revisit them.
ignore = [
  "E501",
  "B008",
  "B904",
  "E402",
  "UP042",
  "ASYNC230",
  "ASYNC240",
  "ASYNC250",
  "ASYNC109",
  "E722",
  "E741",
  "B017",
  "B028",
  "C403",
  "C416",
  "B007",
  "F841",
  "F811",
]

[tool.ruff.lint.per-file-ignores]
# Migrations and dev/CLI scripts intentionally use `print()` for operator
# feedback — they're not request handlers.
"src/migrations/*" = ["T201"]
"src/scripts/*" = ["T201"]
"tests/*" = ["B008", "T201"]

# ----------------------------------------------------------------------------
# Black
# ----------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py311"]

# ----------------------------------------------------------------------------
# Mypy (Phase 5 wires to CI; permissive baseline for now)
# ----------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = false  # ramp up over time
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
